    function (map_yp_alias) (Thanks to Niels Teusink). [CVE-2009-1579]
  - Fixed session fixation issues where someone who can modify a user's
    cookies could gain control of their login session.  The SquirrelMail
    base URI is now uniformly generated, extraneous cookies are cleaned
    up and session IDs are regenerated upon every login (Thanks to Tomas
    Hoger). [CVE-2009-1580]

Version 1.5.1 (branched on 2006-02-12)
--------------------------------------
  - New reply citation to include date and author.
  - Security: Fix some possible XSS bugs.
  - Norwegian Bokmal translation uses nb_NO.
  - Integrated Msg_Flags plugin - turn on/off icons using configuration tool,
    menu number 11 (Tweaks), option number 3, after which users must select an
    icon theme in Options/Display Preferences.
    "Flag"/"Unflag" buttons are implemented as separate plugin.
  - Added Farsi and Tagalog translation support.
  - Enabled Ukrainian and Russian-Ukrainian support
  - Fixed subfolders named "foo.inbox" didn't always work well.
  - sqimap_create_stream() was not obeying passed params properly.
  - Fix non-selectable inbox.
  - Add src/configtest.php script which checks for common errors in the config.
  - Improve display of some unparsable/absent dates (#891354).
  - Add comment (Highest,Normal,Lowest) to X-Priority header.
    Some SpamAssassin rule triggers on the absence of such a comment.
  - Corrected moving of last message in a folder using Delete-Move-Next
    functionality added to core in 1.5.0.
  - Fix test for LOGINDISABLED, should only test when the auth mech actually
    is 'login'.
  - Update required PHP version to 4.1.0, and remove PHP 4.0.x legacy code.
  - Make writing of preferences, abook, calendars fail better when disk full
    (#915527).
  - Remove code related to non-UID-supporting IMAP servers.
  - Fix quoteimap() regex escaping problem (#921291).
  - Added option to suppress Received: line in outbound SM headers (#847107).